[gd_scene load_steps=6 format=3 uid="uid://yexhmnhgmy5o"]

[ext_resource type="Script" path="res://src/pong.gd" id="1_fjmia"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1hl1"]
size = Vector2(10, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xcri3"]
size = Vector2(5, 160)

[sub_resource type="CircleShape2D" id="CircleShape2D_lgcbm"]
radius = 15.0333

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26n7s"]
size = Vector2(20, 800)

[node name="Pong" type="Node2D"]
visible = false
script = ExtResource("1_fjmia")

[node name="Players" type="Node" parent="."]

[node name="PlayerOne" type="CharacterBody2D" parent="Players"]
position = Vector2(20, 400)

[node name="PlayerShape" type="Polygon2D" parent="Players/PlayerOne"]
polygon = PackedVector2Array(-5, -80, 5, -80, 5, 80, -5, 80)

[node name="PlayerArea" type="Area2D" parent="Players/PlayerOne"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/PlayerOne/PlayerArea"]
shape = SubResource("RectangleShape2D_h1hl1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/PlayerOne"]
shape = SubResource("RectangleShape2D_xcri3")

[node name="PlayerTwo" type="CharacterBody2D" parent="Players"]
position = Vector2(1260, 400)

[node name="PlayerShape" type="Polygon2D" parent="Players/PlayerTwo"]
polygon = PackedVector2Array(-5, -80, 5, -80, 5, 80, -5, 80)

[node name="PlayerArea" type="Area2D" parent="Players/PlayerTwo"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/PlayerTwo/PlayerArea"]
shape = SubResource("RectangleShape2D_h1hl1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/PlayerTwo"]
shape = SubResource("RectangleShape2D_xcri3")

[node name="Ball" type="CharacterBody2D" parent="." groups=["ball"]]
position = Vector2(640, 400)

[node name="Polygon2D" type="Polygon2D" parent="Ball"]
polygon = PackedVector2Array(15, 0, 14, -6, 11, -11, 6, -14, 0, -15, -6, -14, -11, -11, -14, -6, -15, 0, -14, 6, -11, 11, -6, 14, 0, 15, 6, 14, 11, 11, 14, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_lgcbm")

[node name="Goals" type="Node" parent="."]

[node name="PlayerOneGoal" type="Area2D" parent="Goals"]
position = Vector2(-10, 0)

[node name="GoalOne" type="CollisionShape2D" parent="Goals/PlayerOneGoal"]
position = Vector2(0, 400)
shape = SubResource("RectangleShape2D_26n7s")

[node name="PlayerTwoGoal" type="Area2D" parent="Goals"]
position = Vector2(1290, 400)

[node name="GoalTwo" type="CollisionShape2D" parent="Goals/PlayerTwoGoal"]
shape = SubResource("RectangleShape2D_26n7s")

[node name="PlayerOneScore" type="Label" parent="."]
offset_left = 320.0
offset_right = 341.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 72
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerTwoScore" type="Label" parent="."]
offset_left = 960.0
offset_right = 981.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 72
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Players/PlayerOne/PlayerArea" to="." method="_on_player_one_area_body_entered"]
[connection signal="body_entered" from="Players/PlayerTwo/PlayerArea" to="." method="_on_player_two_area_body_entered"]
[connection signal="body_entered" from="Goals/PlayerOneGoal" to="." method="_on_player_one_goal_body_entered"]
[connection signal="body_entered" from="Goals/PlayerTwoGoal" to="." method="_on_player_two_goal_body_entered"]
